2002-03-10 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* Interpreter:
	  - faster lookup for other callback modules
	

2002-03-10 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* Interpreter:
	  - faster callback module lookup
	  - faster lookup of callback module std (others will follow)


2002-03-09 Daniel Horn <hellcatv@hotmail.com>
	* Fixed disappearing first unit bug with low quality sprites
	* Fixed cockpit cycle complaint
	* Added Gauntlet mission (if you kill 3 guys, 3 more come)
	* Added XvX missions using the nvn module
	* Fixed [ key to cycle through all allies
	* Fixed save directory to be .vegastrike in windows

2002-03-09 Alexander Rawass <alexannika@users.sourceforge.net>

	* director:
	  ai_orderlist now remembers order when re-launched
	* added findOrderList to Order
	* replaced messy vegastrike.config with older version


2002-03-09 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* fixed crosshairs in firefly/hornet cockpit
	* interpreter:
	  - deleting class instances correctly
	  - faster variable lookup (not working yet)
	  - better fatal error output (stackdump)
	* modified Order::~Order()
	  the suborders get now deleted correctly


2002-03-08 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* ai_orderlist now faster
	* added scanSystem() to Unit class

	
2002-03-07 Daniel Horn <hellcatv@hotmail.com>
	* also had to add gui to src/Makefile.am...strange
	* added gui to configure.in
	* Switched stars to use animations instead of lights so they will not appear 'through' other objects
	* switched any strange OpenGL state vs was setting for the GUI

2002-03-07 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* ai_orderlist now basically working
	* had to add gui to src/Makefile.am

	
2002-03-06 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* homepage/docu
	  added bugs/todo section
	* exporer-missions: fixed? nan-velocity/position bug
	* ordered the missions dir new
	* ai_orderlist (still experimental)