@@ -1,158 +1,166 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
-
-<HTML>
-<HEAD>
-        <TITLE>Vega Strike</TITLE>
-</HEAD>
-
-<BODY BACKGROUND="bg1.jpg" bgcolor="#000000" text="#C0C0C0" link="#000000" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight=0 marginwidth=0>
-<table width="700"><tr><td align="right">
-<img src="logo.gif" width=415 height=155 border=0 alt="">
-</td></tr></table>
-<br><br><br><br>
-
-<Table width="80%"><tr><td>
-<BLOCKQUOTE>
-<CENTER><BR>
-<A HREF = "main.html">Info</A> || <A HREF = "pics.html">Screen Shots</A> || <A HREF = "download.html">Download</A> || <A HREF = "help.html">Add New Ship</A> || <A HREF = "credits.html">Credits</A> || <A HREF = "email.html">E-mail</A>
-<BR></CENTER>
-<table width="100%"><tr><td bgcolor="#393939"><font face="Arial" size="2" color="#FFFFFF"><B>&nbsp;&nbsp;
-Credits <font color="#006834">
-</B></font></td></tr></table>
-
-
-<TABLE CELLSPACING=2 CELLPADDING=2 BORDER=0>
-<TR>
-<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><FONT SIZE=2 FACE=Arial><B>Person</FONT></FONT></TD>
-
-<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><FONT SIZE=2 FACE=Arial><B>Position</FONT></FONT></TD>
-
-<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><FONT SIZE=2 FACE=Arial><B>Previous Job</FONT></FONT></TD>
-
-<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><FONT SIZE=2 FACE=Arial><B>Current Job</FONT></FONT></TD>
-</TR>
-
-<TR>
-<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><A HREF="mailto: hellcatv@hotmail.com">Daniel Horn</A></FONT></TD>
-
-<TD>Lead Programmer</TD>
-
-<TD>Made the Program</TD>
-
-<TD>All General Daily Improvements</TD>
-</TR>
-
-<TR>
-<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><A HREF="mailto:alexannika@users.sourceforge.net">Alexander Rawass</A></FONT></TD>
-
-<TD>Programmer</TD>
-<TD> Finished joystick and config files.</TD>
-<TD>Working on AI Scripts and config files. 
-
-<TD></TD>
-</TR>
-
-<TR>
-<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><A HREF="mailto:ashieh@users.sourceforge.net">ashieh</A></FONT></TD>
-
-<TD>Lead Programmer</TD>
-
-<TD>Worked on the Physics engine and primitive AI.</TD>
-
-<TD>Worked on the 3d wrapper and major speed optimizations</TD>
-</TR>
-
-
-<TR>
-<TD BGCOLOR="#c6c6c6"><font color="#000000">Patrick Horn</TD>
-
-<TD>Developer</TD>
-
-<TD>Worked on AI Development Stack Calculation<br>Worked on unit,terrain, and other config files</TD>
-
-<TD></TD>
-</TR>
-<TR>
-<TD BGCOLOR="#c6c6c6"><font color="#000000">H.E. Day</TD>
-
-<TD>Artist</TD>
-
-<TD>Made Explosions, Made Beautiful cockpit</TD>
-
-<TD></TD>
-</TR>
-<TR>
-<TD BGCOLOR="#c6c6c6"><font color="#000000">Jason Winzenried</TD>
-
-<TD>Artist</TD>
-
-<TD> Made such dazzling, beautiful cockpit and various starships</TD>
-
-<TD></TD>
-</TR>
-<TR>
-<TD BGCOLOR="#c6c6c6"><font color="#000000">Tobias Wollgarn & Major A Payne & Somall</TD>
-
-<TD>Artist</TD>
-
-<TD>Made all the sounds from scratch!</TD>
-
-<TD></TD>
-</TR>
-
-<TR>
-<TD BGCOLOR="#c6c6c6"><font color="#000000">Eagle-1</TD>
-
-<TD>Testing/Advice/Support</TD>
-
-<TD>Helped test MP</TD>
-
-<TD></TD>
-</TR>
-
-<TR>
-<TD BGCOLOR="#c6c6c6"><font color="#000000">Daniel Aleksandrow</TD>
-
-<TD>Artist</TD>
-
-<TD>Made LODs for various starships</TD>
-
-<TD></TD>
-</TR>
-
-<TR>
-<TD BGCOLOR="#c6c6c6"><font color="#000000">James Carthew</TD>
-
-<TD>Artist</TD>
-
-<TD>Made Missile models and Sol system</TD>
-
-<TD>Missions</TD>
-</TR>
-<TR>
-<TD BGCOLOR="#c6c6c6"><font color="#000000">LOAF</TD>
-
-<TD>Stats</TD>
-
-<TD>Helped to balance gun weapon stats</TD>
-
-<TD></TD>
-</TR>
-<TR>
-<TD BGCOLOR="#c6c6c6"><font color="#000000">Sabarok Aresh</TD>
-
-<TD>GUI-Designer</TD>
-<TD>VSSetup Tool, Mission Selector</TD>
-
-<TD>re-writes Mission Selector to use glut</TD>
-</TR>
-
-</TABLE>
-
-</td></tr></table>
-
-
-</BODY>
-</HTML>
-
-
+<html>
+<head>
+  <title>Vega Strike</title>
+</head>
+   <body background="bg1.jpg" bgcolor="#000000" text="#c0c0c0" link="#000000" vlink="#008040" alink="#00ff00" style="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
+ 
+<table width="700">
+  <tbody>
+    <tr>
+      <td align="right"> <img src="logo.gif" width="415" height="155" border="0" alt="">
+ </td>
+    </tr>
+  </tbody>
+</table>
+ <br>
+<br>
+<br>
+<br>
+  
+<table width="80%">
+  <tbody>
+    <tr>
+      <td> 
+      <blockquote> 
+        <center><br>
+ <a href="main.html">Info</a> || <a href="pics.html">Screen Shots</a> ||
+        <a href="download.html">Download</a> || <a href="help.html">Add New
+Ship</a> || <a href="credits.html">Credits</a> || <a href="email.html">E-mail</a>
+ <br>
+        </center>
+ 
+        <table width="100%">
+          <tbody>
+            <tr>
+              <td bgcolor="#393939"><font face="Arial" size="2" color="#ffffff"><b>
+&nbsp;&nbsp; Credits <font color="#006834"> </font></b><font color="#006834"></font></font></td>
+            </tr>
+          </tbody>
+        </table>
+   
+        <table cellspacing="2" cellpadding="2" border="0">
+ <tbody>
+            <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000"><font size="2" face="Arial"><b>
+Person</b></font><b></b></font></td>
+  <td bgcolor="#c6c6c6"><font color="#000000"><font size="2" face="Arial"><b>
+Position</b></font><b></b></font></td>
+  <td bgcolor="#c6c6c6"><font color="#000000"><font size="2" face="Arial"><b>
+Previous Job</b></font><b></b></font></td>
+  <td bgcolor="#c6c6c6"><font color="#000000"><font size="2" face="Arial"><b>
+Current Job</b></font><b></b></font></td>
+ </tr>
+  <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000"><a href="mailto:%20hellcatv@hotmail.com">
+Daniel Horn</a></font></td>
+  <td>Lead Programmer</td>
+  <td>Made the Program</td>
+  <td>All General Daily Improvements</td>
+ </tr>
+  <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000"><a href="mailto:alexannika@users.sourceforge.net">
+Alexander Rawass</a></font></td>
+  <td>Lead Programmer</td>
+ <td> Finished joystick and config files. Wrote a scripting language for
+missions affectionately known as Cb.</td>
+ <td>Working on improving missions and scripting.   </td>
+              <td><br>
+              </td>
+ </tr>
+  <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000"><a href="mailto:ashieh@users.sourceforge.net">
+ashieh</a></font></td>
+  <td>Lead Programmer</td>
+  <td>Worked on the Physics engine and primitive AI.</td>
+  <td>Worked on the 3d wrapper and major speed optimizations</td>
+ </tr>
+   <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000">Patrick Horn</font></td>
+  <td>Programmer</td>
+  <td>Worked on AI Development Stack Calculation.<br>
+Worked on unit,terrain, and other config files. Made the release of vegastrike-0.2.0
+and 0.2.1 possible.</td>
+  <td>Bug testing in Windows 2000 and improvements to GUI<br>
+              </td>
+ </tr>
+ <tr>
+              <td valign="top" bgcolor="#cccccc"><font color="#000000">Sabarok
+Aresh</font><br>
+              </td>
+              <td valign="top">Programmer<br>
+              </td>
+              <td valign="top">Made Vegastrike Setup and Mission Launcher
+. Wrote mission selector for glut<br>
+              </td>
+              <td valign="top">Working on Cargo/Docking GUI<br>
+              </td>
+            </tr>
+            <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000">H.E. Day</font></td>
+  <td>Artist</td>
+  <td>Made Explosions, Made Beautiful cockpit</td>
+  <td><br>
+              </td>
+ </tr>
+ <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000">Jason Winzenried</font></td>
+  <td>Artist</td>
+  <td> Made such dazzling, beautiful cockpit and various starships</td>
+  <td>Working on improving Gemini Sector<br>
+              </td>
+ </tr>
+ <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000">Martin Baldwin</font></td>
+  <td>Artist</td>
+  <td>Entered in many Sectors such as Epsilon, Gemini, etc to milky_way</td>
+  <td>Working on improving the rest of the Universe<br>
+              </td>
+ </tr>
+ <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000">Tobias Wollgarn &amp; Major
+A Payne &amp; Somall</font></td>
+  <td>Artist</td>
+  <td>Made all the sounds from scratch!</td>
+  <td><br>
+              </td>
+ </tr>
+  <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000">Eagle-1</font></td>
+  <td>Testing/Advice/Support</td>
+  <td>Helped test MP</td>
+  <td><br>
+              </td>
+ </tr>
+  <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000">Daniel Aleksandrow</font></td>
+  <td>Artist</td>
+  <td>Made LODs for various starships</td>
+  <td>Working on Terrain<br>
+              </td>
+ </tr>
+  <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000">James Carthew</font></td>
+  <td>Artist</td>
+  <td>Made Missile models and Sol system and Drone model and jump portal</td>
+  <td>Workign on Refinery<br>
+              </td>
+ </tr>
+ <tr>
+ <td bgcolor="#c6c6c6"><font color="#000000">f109 Vampire</font></td>
+  <td>Artist</td>
+  <td>Made Rlaan race</td>
+  <td>Working on future ships<br>
+              </td>
+ </tr>
+   
+          </tbody>
+        </table>
+  </blockquote>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+   
+  </body>
+  </html>
