@@ -32,7 +32,7 @@ Download&nbsp;</FONT></FONT></FONT></B></TD>
 </TABLE>
 <FONT SIZE=+2><B>Vegastrike New Version</B></FONT>
 <FONT FACE="Arial"><FONT COLOR="FFFFFF">
-<li>Windows people need only the data.zip file and can run the .exe file from there.
+
 <li>Linux users need to be sure they run the compiled source code from the unixdata.tgz directory.  If vegastrike is run from an improper directory it will print "Panic Exit no mission found" and then exit
 <li> Visit the project page here: <A HREF="http://sourceforge.net/projects/vegastrike/"> Sourceforge Project Site</A>
 <li> Please mail any comments to <a href="mailto:vegastrike-users@lists.sourceforge.net">vegastrike-users@lists.sourceforge.net</a>! We sincerely appreciate your feedback.
@@ -40,14 +40,16 @@ Download&nbsp;</FONT></FONT></FONT></B></TD>
 </FONT></FONT></FONT>
 <BR><BR><BR>
 <p>
-Vegastrike 0.2.0 files:
+Vegastrike 0.2.1 files:
 <br>
 <P><FONT FACE="Arial"><FONT COLOR="#FFFFFF"><FONT SIZE=-1>&nbsp;&nbsp;
-<A HREF="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.0.zip">Vegastrike 0.2.0 Windows Beta</A> 32.2 M</FONT></FONT></FONT>
+<A HREF="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.1.zip">Vegastrike 0.2.1 Windows Beta</A> 34.2 M</FONT></FONT></FONT>
 <P><FONT FACE="Arial"><FONT COLOR="#FFFFFF"><FONT SIZE=-1>&nbsp;&nbsp;
-<A HREF="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.0_src.tgz">Vegastrike 0.2.0 Source Code</A> 548 KB</FONT></FONT></FONT>
+<A HREF="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.1_noterrain.zip">Vegastrike 0.2.1 Windows Slim Beta (No terrain)</A> 25 M</FONT></FONT></FONT>
 <P><FONT FACE="Arial"><FONT COLOR="#FFFFFF"><FONT SIZE=-1>&nbsp;&nbsp;
-<A HREF="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.0_unixdata.tgz">Vegastrike 0.2.0 Unix Data</A> 30.6 M</FONT></FONT></FONT>
+<A HREF="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.1.tgz">Vegastrike 0.2.1 Source Code</A> 548 KB</FONT></FONT></FONT>
+<P><FONT FACE="Arial"><FONT COLOR="#FFFFFF"><FONT SIZE=-1>&nbsp;&nbsp;
+<A HREF="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.1_unixdata.tgz">Vegastrike 0.2.1 Unix Data</A> 30.6 M</FONT></FONT></FONT>
 
 <P><FONT FACE="Arial"><FONT COLOR="#FFFFFF"><FONT SIZE=-1>&nbsp;&nbsp;
 <A HREF="vegastrike-0.2.0-x86-linux.tar.gz">Vegastrike 0.2.0 Linux Binary</A> 1.6 M  &nbsp;&nbsp;  needs glibc2.2</FONT></FONT></FONT>
