@@ -47,15 +47,29 @@ height=1 width=1></noscript>
 <tr>
 <td BGCOLOR="#393939"><b><font face="Arial"><font size=-1><font color="#FFFFFF"\
 >&nbsp;&nbsp;
+Update! </font><font color="#006834">March 12, 2002</font></font></font></b></td\
+>
+</tr>
+</table>
+<ul> 
+<li> <b>Vegastrike 0.2.1</b> is complete! This release features many new items, including most user requested features. <a href="download.html">Download</a> it!
+<li> If it complains about <b>zlib.dll</b> or you can't fly into a planet, please see below.
+<li> <b>IMPORTANT Patch!</b>Users that don't have nVidia cards may not have radar. You can <a href="radar_fix.zip">download a patch</a> that you must unzip into the vegastrike directory. From there you can rename lvdu or rvdu.cpt to disabled-cockpit.cpt and it will display that computer unit. or else you can manually overwrite <a href="disabled-cockpit.cpt">disabled-cockpit/disabled-cockpit.cpt</a> with the new version <a href="disabled-cockpit.cpt">here</a>. <b>Use [ (bracket) to begin gauntlet and n_vs_n missions, and use w to cycle</b> computer modes. (these instructions are normally given in mission, but since some openGL dll are buggy... you have to hear it from me).  
+</ul>
+
+<table WIDTH="100%" >
+<tr>
+<td BGCOLOR="#393939"><b><font face="Arial"><font size=-1><font color="#FFFFFF"\
+>&nbsp;&nbsp;
 Update! </font><font color="#006834">March 11, 2002</font></font></font></b></td\
 >
 </tr>
 </table>
 <ul> 
-<li> Vegastrike 0.2.1 is complete! This release features many new items, including most user requested features.
 <li> To learn how to play vegastrike and use all of the new features, please go to the <a href="player_tutorial/index.html">playing</a> section.
 <li> Windows (and linux) Modem Users, Download the <a href="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.1_noterrain.zip">slim data</a>! Terrain has been excluded and lower quality planet textures abound.
 <li> Windows Broadband Users download Vegastrike 0.2.1 high detail <a href="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.1.zip">here</a>. 
+<li><b>Update!</b> Here is the <a href="zlib.dll">zlib.dll</a> that vegastrike may complain is missing. Please people, you HAVE to report these kinds of problems to me or I cannot fix them. Only one windoze user reported the lack of a zlib.dll Thank you Jason for letting me know it isn't included by default.
 <li><b>Update!</b> If you downloaded the high detail version before 6:00pm Mar11 PST and wish to explore the terrain, you must replace sol_sector/sol_earth.system with the patched version here: <a href="sol_earth.system">sol_earth.system</a> and also sol_sector/sol.system with the patched version here: <a href="sol.system">sol.system</a>. If you downloaded the slim version, this patch will not work.  Also I have fixed joystick jitter during time compression. Linux users can also replace these or download new source.
 <li> In windows merely run setup.exe and then Mission Launcher.exe  There are many new missions to play.
 <li> Linux users download the <a href="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.1.tgz">source</a>, compile and run from the <a href="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.1_unixdata.tgz">data</a> directory.
